# CraftDemo-Intuit

craftdemo/: pom.xml
craftdemo/src/main/java/com/assessment/craftdemo/: CraftdemoApplication.java  PersonalInfoService.java  PersonalInformation.java  PersonalInformationController.java
craftdemo/src/test/java/com/assessment/craftdemo/: CraftdemoApplicationTests.java
craftdemoServer/: CMakeLists.txt
craftdemoServer/proto/: PersonalInfo.grpc.pb.cc  PersonalInfo.grpc.pb.h  PersonalInfo.pb.cc  PersonalInfo.pb.h  PersonalInfo.proto
craftdemoServer/src/: server.cc
